# cyberpuritan-tui

./: .gitignore  Cargo.toml  LICENSE  README.md  main.py  requirements.txt  salmos.json  txt.txt
app/: cli.py  textual_app.py
app/cli/: __init__.py  command_parser.py
app/core/: bible_parser.py  config.py  connections.py  data_models.py  database.py  db.py  theme.py
app/handlers/: actions_handler.py  bible_handler.py  help_handler.py  journal_handler.py  notes_handler.py  psaltery_handler.py  reports_handler.py  symbols_handler.py
app/models/: action_item_model.py  bible.py  fasting.py  journal_model.py  notes_model.py  piety.py  psaltery.py  record.py  resolution.py  sermon.py  study.py  sunday.py  symbols.py
app/reports/: metrics.py
app/screens/: add_journal_screen.py  home_screen.py  journal_screen.py
app/ui/: action_item_view.py  actions.py  bible_view.py  icons.py  journal_view.py  main_menu.py  menu_igreja.py  menu_pessoal.py  menu_recursos.py  piety_view.py  psaltery_view.py  record_view.py  reports_view.py  resolution_view.py  sermon_view.py  status_panel.py  study_view.py  styles.tcss  symbols_view.py  telas.py
data/: dados.db  dados.db.backup.20251029203139  meu_estudo.db  piedade_metricas.json  piety.db  resolutions.json  salmos.json  salterio_metadata.csv
data/saltério/: Salmo 100_instrumental.opus  Salmo 101_instrumental.opus  Salmo 102_instrumental.opus  Salmo 103_instrumental.opus  Salmo 104_instrumental.opus  Salmo 105_instrumental.opus  Salmo 106_instrumental.opus  Salmo 107_instrumental.opus  Salmo 108_instrumental.opus  Salmo 109_instrumental.opus  Salmo 10_instrumental.opus  Salmo 110_a_capela.opus  Salmo 110_instrumental.opus  (+170 more)
scripts/: populate_themes.py  prepare_database.py
src/: app.rs  db.rs  handler.rs  main.rs  models.rs  theme.rs  ui.rs
src/components/: mod.rs  (+33 more)
tests/: test_metrics.py
(+12 files in other folders)
