[package]
name = "cyber_puritano"
version = "0.1.0"
edition = "2021"

repository = "https://github.com/cosmogelho/cyberpuritan-tui"
license = "MIT"
description = "Aplicativo TUI para estudo teológico e piedade pessoal inspirado na tradição puritana reformada."

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
tokio = { version = "1.36.0", features = ["full"] }


[dependencies.chrono]
version = "0.4.38"

[dependencies.tempfile]
version = "3.10.1"
default-run = "cyber_puritano"
