[package]
name = "cyber_puritano"
version = "0.1.0"
edition = "2021"

repository = "https://github.com/cosmogelho/cyberpuritan-tui"
license = "MIT"
description = "Aplicativo TUI para estudo teológico e piedade pessoal inspirado na tradição puritana reformada."

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[dependencies.chrono]
version = "0.4.38"

[dependencies.tempfile]
version = "3.10.1"
default-run = "cyber_puritano"
